<resources>
    <string name="app_name">Raspio</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_settings">Settings</string>
    <string name="image_description">Song-Cover</string>
    <string name="transmission">Transmission</string>
    <string name="frequency">Frequency</string>
    <string name="transmission_state">Radio Transmission</string>
    <string name="stop_playback">Stop the Playback</string>
    <string name="play_pause_playback">Play/Pause the playback.</string>
    <string name="skip_song">Skip the song.</string>
    <string name="watermark">From\nbickoSiTiEff</string>
    <string name="confirm">Confirm</string>
    <string name="raspi_ip">Raspi IP</string>
    <string name="enter_ip">Enter Raspi IP:</string>
    <string name="select_server">Select Server</string>
    <string name="add_song">Add a new song to playlist</string>
    <string name="wip">WIP - Song-Download</string>
    <string name="add_as_next">Add as next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="server_timeout">Couldn\'t connect to server.</string>
    <string name="increase_volume">Increase volume</string>
    <string name="decrease_volume">Decrease volume</string>
    <string name="previous_playback">Plays previous song or jumps to the start of the current one.</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="set_as_next">Set as next</string>
    <string name="remove">Remove</string>
    <string name="media_notification_channel_description">Playback notifications</string>
    <string name="shr_error_ip">Could not connect to address</string>
    <string name="scan">Scan</string>
    <string name="click_icon_helper">Click the icon to scan for Raspi in current network.</string>
    <string name="scan_failed">Scan for Raspberry Pi failed</string>
    <string name="not_found_on_local_network">Couldn\'t find device on local network</string>
    <string name="ip_not_resolvable">Couldn\'t resolve IP of Raspberry Pi</string>
    <string name="preferenceRemoveServer">Remove Server</string>
    <string name="preferenceManagementScreen">Enable management screen</string>
    <string name="preferenceNotificationToggle">Toggle notifications</string>
</resources>
