<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_server_controls"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/transmission"/>

    <item
            android:id="@+id/navigation_playlist"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_playlist"/>
    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_settings"/>
    <item
            android:id="@+id/navigation_server_select"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/select_server"/>

</menu>
