<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_playlist">

    <fragment
            android:id="@+id/navigation_playlist"
            android:name="me.bickositieff.raspio.ui.playlist.PlaylistFragment"
            android:label="@string/title_playlist"
            tools:layout="@layout/fragment_playlist"/>

    <fragment
            android:id="@+id/navigation_server_controls"
            android:name="me.bickositieff.raspio.ui.serverControls.ServerControlsFragment"
            android:label="@string/transmission"
            tools:layout="@layout/fragment_server_controls"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="me.bickositieff.raspio.ui.preferences.PreferencesFragment"
            android:label="@string/title_settings"/>
    <fragment
            android:id="@+id/navigation_server_select"
            android:name="me.bickositieff.raspio.ui.serverSelect.ServerSelectFragment"
            android:label="Select Server"
            tools:layout="@layout/fragment_server_select"/>
</navigation>
