<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="me.bickositieff.raspio.ui.serverSelect.ServerSelectViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.serverSelect.ServerSelectActivity"
            >

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serverSelectIPInput"
                android:hint="@string/raspi_ip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/serverSelectConfirm"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/serverSelectIPEditText"
                    android:text="@={viewModel.ip}"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:text="@string/confirm"
                android:enabled="@{viewModel.valid}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serverSelectConfirm"
                android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serverSelectIPInput"
                android:layout_marginTop="16dp"/>

        <Button
                android:text="@string/scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serverSelectIPScan"
                android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintEnd_toStartOf="@id/serverSelectConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/serverSelectConfirm"
                app:layout_constraintTop_toTopOf="@+id/serverSelectConfirm"/>

        <TextView
                android:text="@string/watermark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="32dp"
                android:textAlignment="center"
                android:id="@+id/serverSelectBranding"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/serverSelectLoading"
                android:indeterminate="true"
                app:layout_constraintStart_toStartOf="@+id/serverSelectIPInput"
                app:layout_constraintEnd_toEndOf="@+id/serverSelectIPInput"
                app:layout_constraintBottom_toBottomOf="@+id/serverSelectIPInput"
                app:layout_constraintTop_toTopOf="@+id/serverSelectIPInput"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.INVISIBLE}"
                tools:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>