<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="me.bickositieff.raspio.ui.serverSelect.ServerSelectViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.serverSelect.ServerSelectFragment"
            android:id="@+id/frameLayout2">

        <TextView
                android:text="@string/enter_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelServerSelect"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.ip}"
                android:ems="10"
                android:id="@+id/ipServerSelect"
                app:layout_constraintTop_toBottomOf="@+id/labelServerSelect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"/>

        <Button
                android:text="@string/confirm"
                android:enabled="@{viewModel.valid}"
                android:onClick="@{() -> viewModel.confirmIP()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/confirmServerSelect"
                app:layout_constraintTop_toBottomOf="@+id/ipServerSelect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"/>

        <TextView
                android:text="@string/watermark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="32dp"
                android:textAlignment="center"/>

        <CheckBox
                android:enabled="false"
                android:checked="@{viewModel.valid}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/ipServerSelect"
                app:layout_constraintBottom_toBottomOf="@+id/ipServerSelect"
                app:layout_constraintTop_toTopOf="@+id/ipServerSelect"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>